# OnnxRuntimeDemo

./: .gitattributes  CMakeLists.txt  README.md  dynamic_semantic_map_evaluator.onnx  infer_wrapper.cpp  infer_wrapper.cpp.bak  infer_wrapper.h  main.cpp  test.cpp
models/: ego_cuda.onnx  image_fixed.onnx
src/: CMakeLists.txt  infer_wrapper.cpp  infer_wrapper.h
tools/: CMakeLists.txt  main.cpp  test.cpp
